--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 <head>
   <title>Rock-Paper-Scissors</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- <link rel="stylesheet" type="text/css" href="reset.css"> -->
+  <link rel="stylesheet" type="text/css" href="reset.css">
   <link rel="stylesheet" type="text/css" href="style.css">
 <body>
   <section id="container">
@@ -11,28 +13,31 @@
     <p> A steam powered bot has challenged you to a game. <u>Rocks</u> beat <u>Scissors</u>, <u>Scissors</u> beats <u>Paper</u>, <u>Paper</u> beats <u>Rock</u>.</p>
     </header>
     <div class="scoreboard">
-      <div class="scoreboard-title"> Scoreboard </div>
+      <!-- <div class="scoreboard-title"> Scoreboard </div> -->
       <div class="scoreboard-score">
-        <div id="myScore">0</div>
-        <div id="botScore">0</div>
-        <p>You</p>
-        <p>Bot</p>
+        <div class="block-1">
+          <div id="myScore">0</div>
+          <p>YOU</p>
+        </div>
+        <div class="block-2">
+          <div id="botScore">0</div>
+          <p>BOT</p>
+        </div>
 
       </div>
       <div class="clear"></div>
     </div>
     <section>
-      <h2>Choose wisely!</h2>
+      <div id="result"></div>
+      <h4>You played <u><a id="myChoice">___</a></u>. The bot played <u><a id="botChoice">___</a></u>.</h4>
+      <div class="clear"></div>
+      <h2>CHOOSE WISELY!</h2>
       <button id="rock">Rock</button>
       <button id="paper">Paper</button>
       <button id="scissors">Scissors</button>
       <div class="clear">
     </section>
-    <div>
-      <h4>You played <u><a id="myChoice">___</a></u>. The bot played <u><a id="botChoice">___</a></u>.</h4>
-      <div class="clear"></div>
-      <div id="result"></div>
-    </div>
+    <footer></footer>
     <script type="text/javascript" src="script.js"></script>
   </section>
 </body>
