--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
       <div class="clear"></div>
     </div>
     <section>
-      <div id="result"></div>
+      <div style="height:40px;">
+        <div id="result"></div>
+      </div>
       <h4>You played <u><a id="myChoice">___</a></u>. The bot played <u><a id="botChoice">___</a></u>.</h4>
       <div class="clear"></div>
       <h2>CHOOSE WISELY!</h2>
